# micro-subscribers-django

./: Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh
micro_subscribers/: asgi.py  settings.py  urls.py  wsgi.py
subscriptions/: models.py
