[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = ["asgiref==3.5.2", "django==4.0.4", "sqlparse==0.4.2", "tzdata==2022.1"]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
